--- a/Practice/.github/workflows/cd_frontend.yml
+++ b/Practice/.github/workflows/cd_frontend.yml
@@ -23,6 +23,8 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/Dockerfile.backend
+          file: ./docker/Dockerfile.frontend
+          build-args: |
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
           push: true
-          tags: sidharth999/learning-backend:${{ github.sha }}
+          tags: sidharth999/learning-frontend:${{ github.sha }}
